tests/invalid/Assign_Invalid_1.whiley
function f() -> int:
    return true
